{
  "version": 4,
  "terraform_version": "1.2.6",
  "serial": 20,
  "lineage": "51b5bf73-c9b6-0761-3627-8cec9ea690d8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Ansible1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02358d9f5245918a3",
            "arn": "arn:aws:ec2:us-east-1:011477265343:instance/i-052a31742bfff1eb9",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-052a31742bfff1eb9",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "centos7",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0b11fa94b91fc2423",
            "private_dns": "ip-10-0-1-31.ec2.internal",
            "private_ip": "10.0.1.31",
            "public_ip": "34.229.112.207",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0ed579b37b75d90e1",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00bad0c560b6a88a5",
            "tags": {
              "Name": "Ansible1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0eee1bef62e2b923d"
            ]
          },
          "dependencies": [
            "aws_security_group.sakasecuritygroup",
            "aws_subnet.sakasubnet",
            "aws_vpc.saka"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Ansible2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02358d9f5245918a3",
            "arn": "arn:aws:ec2:us-east-1:011477265343:instance/i-04236ee1d33c4d1f6",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04236ee1d33c4d1f6",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "centos7",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0c8c52ef2cd41d0bf",
            "private_dns": "ip-10-0-1-85.ec2.internal",
            "private_ip": "10.0.1.85",
            "public_ip": "34.229.24.137",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0e1dffbb30dc94457",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00bad0c560b6a88a5",
            "tags": {
              "Name": "Ansible2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0eee1bef62e2b923d"
            ]
          },
          "dependencies": [
            "aws_security_group.sakasecuritygroup",
            "aws_subnet.sakasubnet",
            "aws_vpc.saka"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Ansible3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02358d9f5245918a3",
            "arn": "arn:aws:ec2:us-east-1:011477265343:instance/i-072c81d794813c3ef",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-072c81d794813c3ef",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "centos7",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0cc5f7b366c1fe334",
            "private_dns": "ip-10-0-1-49.ec2.internal",
            "private_ip": "10.0.1.49",
            "public_ip": "54.92.167.229",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0d8528eb76614c21a",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00bad0c560b6a88a5",
            "tags": {
              "Name": "Ansible3"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0eee1bef62e2b923d"
            ]
          },
          "dependencies": [
            "aws_security_group.sakasecuritygroup",
            "aws_subnet.sakasubnet",
            "aws_vpc.saka"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Ansible_Master",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02358d9f5245918a3",
            "arn": "arn:aws:ec2:us-east-1:011477265343:instance/i-06e6d2ef34a4dfde2",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06e6d2ef34a4dfde2",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "centos7",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0700ff5da75eaf5c3",
            "private_dns": "ip-10-0-1-202.ec2.internal",
            "private_ip": "10.0.1.202",
            "public_ip": "54.81.47.230",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0586cc11f08b6a8f7",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00bad0c560b6a88a5",
            "tags": {
              "Name": "Ansible_Master"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0eee1bef62e2b923d"
            ]
          },
          "dependencies": [
            "aws_security_group.sakasecuritygroup",
            "aws_subnet.sakasubnet",
            "aws_vpc.saka"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "sakagateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:011477265343:internet-gateway/igw-04e12f60e58c2517a",
            "id": "igw-04e12f60e58c2517a",
            "owner_id": "011477265343",
            "tags": {
              "Name": "Saka Gateway"
            },
            "vpc_id": "vpc-07212b71514b0f665"
          },
          "dependencies": [
            "aws_vpc.saka"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "sakaroutetable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-045e0b94635eb91c2",
            "owner_id": "011477265343",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04e12f60e58c2517a",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Saka Route Table"
            },
            "vpc_id": "vpc-07212b71514b0f665"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.sakagateway",
            "aws_vpc.saka"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00c3315cda9a3e80c",
            "route_table_id": "rtb-045e0b94635eb91c2",
            "subnet_id": "subnet-00bad0c560b6a88a5"
          },
          "dependencies": [
            "aws_internet_gateway.sakagateway",
            "aws_route_table.sakaroutetable",
            "aws_subnet.sakasubnet",
            "aws_vpc.saka"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sakasecuritygroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:011477265343:security-group/sg-0eee1bef62e2b923d",
            "description": "Allows all SSH and ICMP traffic.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0eee1bef62e2b923d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ICMP.",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH.",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Allow SSH \u0026 ICMP Traffic",
            "name_prefix": "",
            "owner_id": "011477265343",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SAKA SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-07212b71514b0f665"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.saka"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sakasubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:011477265343:subnet/subnet-00bad0c560b6a88a5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-00bad0c560b6a88a5",
            "map_public_ip_on_launch": false,
            "owner_id": "011477265343",
            "tags": {
              "Name": "Saka Subnet"
            },
            "vpc_id": "vpc-07212b71514b0f665"
          },
          "dependencies": [
            "aws_vpc.saka"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "saka",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:011477265343:vpc/vpc-07212b71514b0f665",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0756b31579ec74966",
            "default_route_table_id": "rtb-0e7826960fb887817",
            "default_security_group_id": "sg-0cf68eaf4a7e5ae43",
            "dhcp_options_id": "dopt-03015051ce8776290",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-07212b71514b0f665",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0e7826960fb887817",
            "owner_id": "011477265343",
            "tags": {
              "Name": "Saka VPC"
            }
          }
        }
      ]
    }
  ]
}